# technical_trial

./: .env.sample  .gitignore  DESIGN_NOTE.md  README.md  convert_cookies.py  instructions.md  main.py  pyproject.toml  results.json
src/: config.py  graph.py  schemas.py
src/config/: loggin.py  logging.py  settings.py
src/filters/: text_filter.py
src/prompts/: text_filter_prompt.txt  utils.py  vision_analyzer_prompt.txt
src/scraper/: client.py  schemas.py  scraper.py  service.py
src/selector/: selector.py
src/vision/: analyzer.py  downloader.py
tests/: test_graph.py  test_scraper.py  test_selector.py  test_text_filter.py  test_vision_analyzer.py
