[tool.ruff.lint]
select = [
  "F",
  "E",
  "W",
  "C90",
  "I",
  "N",
  "UP",
  "YTT",
  # "ANN", # flake8-annotations: we should support this in the future but 100+ errors atm
  "ASYNC",
  "S",
  "BLE",
  "FBT",
  "B",
  "A",
  "COM",
  "C4",
  "DTZ",
  "T10",
  "DJ",
  "EM",
  "EXE",
  "FA",
  'ISC',
  "ICN",
  "G",
  'INP',
  'PIE',
  "T20",
  'PYI',
  'PT',
  "Q",
  "RSE",
  "RET",
  "SLF",
  "SLOT",
  "SIM",
  "TID",
  "TC",
  "INT",
  # "ARG", # Unused function argument
  "PTH",
  "ERA",
  "PD",
  "PGH",
  "PL",
  "TRY",
  "FLY",
  # "NPY",
  # "AIR",
  "PERF",
  # "FURB",
  # "LOG",
  "RUF",
]
ignore = [
  "S101",   # Use of assert detected https://docs.astral.sh/ruff/rules/assert/
  "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
  "SIM102", # sometimes it's better to nest
  # of types for comparison.
  # Deactivated because it can make the code slow:
  # https://github.com/astral-sh/ruff/issues/7871
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.pytest.ini_options]
filterwarnings = [
  "ignore:co_lnotab is deprecated, use co_lines instead.:DeprecationWarning:js2py_.utils.injector",
]

[project]
name = "technical-trial"
version = "0.1.0"
description = "Technical trial for Dennis"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Dennis Paz", email = "dppazlopez@gmail.com" }]
requires-python = "==3.13.*"
dependencies = [
  "argparse==1.4.0",
  "langchain[google-genai]==0.3.27",
  "langgraph==0.6.8",
  "opencv-python==4.12.0.88",
  "pydantic[email]==2.11.9",
  "pydantic-settings==2.11.0",
  "ruff==0.13.2",
  "twikit==2.3.3",
  "yt-dlp==2025.9.26",
  "pytest==8.4.2",
  "pytest-mock==3.15.1",
  "pytest-asyncio==1.2.0",
]
